<?xml version="1.0" encoding="utf-8"?>
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GMapsActivity">

        <Button
            android:id="@+id/appointmentButton"
            android:contentDescription="checkAppointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:icon="@drawable/tommy_trojan"
            android:text="View your appointment"
            android:padding="10dp"
            android:layout_marginTop="70dp"
            android:paddingEnd="10dp"
            android:onClick="toSummary"/>

        <ImageButton
            android:id="@+id/setting"
            android:padding="20dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleType="fitCenter"
            android:src="@drawable/setting"
            android:foregroundGravity="left|top"
            android:onClick="toSetting"/>


</fragment>