...
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/editTextUSCID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter USC ID Number"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:textColorHint="@color/editText"
...
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/buttonContinue"
        android:contentDescription="continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button_solid"
        android:paddingLeft="55dp"
...
