<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/timeSlotDetailView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:text="Reserve or sign up for a reminder using the buttons below"
        android:textColor="@color/black"
        android:textSize="25dp" />

    <Button
        android:id="@+id/reserve"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="550dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/bookingPageReserveButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <Button
        android:id="@+id/remindMe"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="550dp"
        android:layout_toRightOf="@+id/reserve"
        android:fontFamily="sans-serif-light"
        android:text="@string/bookingPageRemindMeButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="275dp"
        android:layout_height="306dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="200dp"
        app:srcCompat="@drawable/usc_crest" />
</RelativeLayout>